Add swagger autogen part 1
