# src/customers/routes.js
@@ -6,5 +6,6 @@ const routes = express.Router()
 routes.post('/customers', translator.create)
 routes.get('/customers', translator.find)
 routes.get('/customers/:list', translator.find)
+routes.patch('/customers/:list', translator.find)
 
 module.exports = routes
